<?xml version="1.0" encoding="utf-8"?>

<!-- 
   Copyright 2010 John R. Hicks

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
 -->


<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent"
  	android:padding="10dip">

  	<TextView
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/feed_url"/>
  		
  	<EditText android:id="@+id/channel_edit_url"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:singleLine="true"/>
  		
  	<TextView
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:text="@string/feed_name"/>
  		
  	<EditText android:id="@+id/channel_edit_name"
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:singleLine="true"/>
  		
  	<LinearLayout
  		android:layout_width="fill_parent"
  		android:layout_height="fill_parent"
  		android:paddingTop="8dip"
  		android:gravity="center_horizontal">
  		
  		<Button android:id="@+id/channel_edit_save"
  			android:layout_width="wrap_content"
  			android:layout_height="wrap_content"
  			android:text="@string/btn_save"/>	
  	</LinearLayout>
</LinearLayout>
